force-app/main/default/objects/Activity/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Declaration</fullName>
            </value>
            <value>
                <fullName>Department</fullName>
            </value>
            <value>
                <fullName>Extension</fullName>
            </value>
            <value>
                <fullName>Form Query</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Organisation Details</fullName>
            </value>
            <value>
                <fullName>Provider Contact</fullName>
            </value>
            <value>
                <fullName>Provider Login</fullName>
            </value>
            <value>
                <fullName>Submission</fullName>
            </value>
            <value>
                <fullName>Technical</fullName>
            </value>
            <value>
                <fullName>QFR - Average Hourly Rate of Pay</fullName>
            </value>
            <value>
                <fullName>QFR - Care Minutes</fullName>
            </value>
            <value>
                <fullName>QFR - Co-located Services</fullName>
            </value>
            <value>
                <fullName>QFR - Declaration Incomplete</fullName>
            </value>
            <value>
                <fullName>QFR - Definition Query</fullName>
            </value>
            <value>
                <fullName>QFR - Differences compared to the ACFR</fullName>
            </value>
            <value>
                <fullName>QFR - Due Date</fullName>
            </value>
            <value>
                <fullName>QFR - Extension Request</fullName>
            </value>
            <value>
                <fullName>QFR - Food &amp; Nutrition</fullName>
            </value>
            <value>
                <fullName>QFR - General</fullName>
            </value>
            <value>
                <fullName>QFR - Hours</fullName>
            </value>
            <value>
                <fullName>QFR - Import Spreadsheets</fullName>
            </value>
            <value>
                <fullName>QFR - Incomplete Email</fullName>
            </value>
            <value>
                <fullName>QFR - Labour Costs</fullName>
            </value>
            <value>
                <fullName>QFR - Late Email</fullName>
            </value>
            <value>
                <fullName>QFR - Mandatory?</fullName>
            </value>
            <value>
                <fullName>QFR - Medicare Statements</fullName>
            </value>
            <value>
                <fullName>QFR - NATSI flex</fullName>
            </value>
            <value>
                <fullName>QFR - Portal Re-opened</fullName>
            </value>
            <value>
                <fullName>QFR - Quarterly Financial Statements</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>