force-app/main/default/objects/Activity/fields/Follow_Up_Area__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Area__c</fullName>
    <label>Follow Up Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Department</fullName>
            </value>
            <value>
                <fullName>Forms Admin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>