force-app/main/default/objects/Activity/fields/Follow_Up_Comments__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Comments__c</fullName>
    <label>Follow Up Comments</label>
    <type>TextArea</type>
</CustomField>