force-app/main/default/objects/Activity/fields/Follow_Up_Status__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Status__c</fullName>
    <label>Follow Up Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AP Unavailable</fullName>
            </value>
            <value>
                <fullName>Incomplete Email Sent</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>RC Re-issued</fullName>
            </value>
            <value>
                <fullName>Referred</fullName>
            </value>
            <value>
                <fullName>Waiting Follow Up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>