force-app/main/default/objects/Activity/fields/Follow_Up_Task__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Task__c</fullName>
    <formula>IF(TEXT(Follow_Up_Area__c)!=NULL,true,false)</formula>
    <label>Follow Up Task</label>
    <type>Checkbox</type>
</CustomField>