force-app/main/default/objects/Activity/fields/Length_of_Call_Mins__c.field-meta.xml
<CustomField>
    <fullName>Length_of_Call_Mins__c</fullName>
    <label>Length of Call (Mins)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>